@@ -83,8 +83,6 @@
 //  PARAM_FILM_CHANNELS_HAS_AVG_SHADING_NORMAL
 //  PARAM_FILM_CHANNELS_HAS_NOISE
 //  PARAM_FILM_CHANNELS_HAS_USER_IMPORTANCE
-//
-//  PARAM_FILM_DENOISER
 
 // (optional)
 //  PARAM_HAS_INFINITELIGHT
