@@ -265,13 +265,13 @@ OPENCL_FORCE_NOT_INLINE void Film_AddSample(__constant const Film* restrict film
 		const uint x, const uint y,
 		__global SampleResult *sampleResult, const float weight
 		FILM_PARAM_DECL) {
-#if defined(PARAM_FILM_DENOISER)
-	// Add the sample to film denoiser sample accumulator
-	FilmDenoiser_AddSample(film,
-			x, y, sampleResult, weight,
-			filmWidth, filmHeight
-			FILM_DENOISER_PARAM);
-#endif
+	if (film->bcdDenoiserEnable) {
+		// Add the sample to film denoiser sample accumulator
+		FilmDenoiser_AddSample(film,
+				x, y, sampleResult, weight,
+				filmWidth, filmHeight
+				FILM_DENOISER_PARAM);
+	}
 
 	Film_AddSampleResultColor(x, y, sampleResult, weight
 			FILM_PARAM);
@@ -459,8 +459,6 @@ OPENCL_FORCE_NOT_INLINE void Film_AddSample(__constant const Film* restrict film
 #endif
 //------------------------------------------------------------------------------
 
-#if defined(PARAM_FILM_DENOISER)
-
 #define KERNEL_ARGS_FILM_RADIANCE_GROUP_SCALE_0 \
 		, float filmRadianceGroupScale0_R \
 		, float filmRadianceGroupScale0_G \
@@ -513,10 +511,6 @@ OPENCL_FORCE_NOT_INLINE void Film_AddSample(__constant const Film* restrict film
 	KERNEL_ARGS_FILM_RADIANCE_GROUP_SCALE_5 \
 	KERNEL_ARGS_FILM_RADIANCE_GROUP_SCALE_6 \
 	KERNEL_ARGS_FILM_RADIANCE_GROUP_SCALE_7
-	
-#else
-#define KERNEL_ARGS_FILM_DENOISER
-#endif
 
 //------------------------------------------------------------------------------
 
@@ -733,23 +727,29 @@ __kernel __attribute__((work_group_size_hint(64, 1, 1))) void Film_Clear(
 	// Film denoiser buffers
 	//--------------------------------------------------------------------------
 
-#if defined(PARAM_FILM_DENOISER)
-	filmDenoiserNbOfSamplesImage[gid] = 0.f;
-	filmDenoiserSquaredWeightSumsImage[gid] = 0.f;
+	if (filmDenoiserNbOfSamplesImage)
+		filmDenoiserNbOfSamplesImage[gid] = 0.f;
+	if (filmDenoiserSquaredWeightSumsImage)
+		filmDenoiserSquaredWeightSumsImage[gid] = 0.f;
 
-	filmDenoiserMeanImage[gid * 3 + 0] = 0.f;
-	filmDenoiserMeanImage[gid * 3 + 1] = 0.f;
-	filmDenoiserMeanImage[gid * 3 + 2] = 0.f;
+	if (filmDenoiserMeanImage) {
+		filmDenoiserMeanImage[gid * 3 + 0] = 0.f;
+		filmDenoiserMeanImage[gid * 3 + 1] = 0.f;
+		filmDenoiserMeanImage[gid * 3 + 2] = 0.f;
+	}
 
-	filmDenoiserCovarImage[gid * 6 + 0] = 0.f;
-	filmDenoiserCovarImage[gid * 6 + 1] = 0.f;
-	filmDenoiserCovarImage[gid * 6 + 2] = 0.f;
-	filmDenoiserCovarImage[gid * 6 + 3] = 0.f;
-	filmDenoiserCovarImage[gid * 6 + 4] = 0.f;
-	filmDenoiserCovarImage[gid * 6 + 5] = 0.f;
+	if (filmDenoiserCovarImage) {
+		filmDenoiserCovarImage[gid * 6 + 0] = 0.f;
+		filmDenoiserCovarImage[gid * 6 + 1] = 0.f;
+		filmDenoiserCovarImage[gid * 6 + 2] = 0.f;
+		filmDenoiserCovarImage[gid * 6 + 3] = 0.f;
+		filmDenoiserCovarImage[gid * 6 + 4] = 0.f;
+		filmDenoiserCovarImage[gid * 6 + 5] = 0.f;
+	}
 
-	for (uint channelIndex = 0; channelIndex < 3; ++channelIndex)
-		for (uint i = 0; i < filmDenoiserNbOfBins; ++i)
-			filmDenoiserHistoImage[gid * filmDenoiserNbOfBins * 3 + channelIndex * filmDenoiserNbOfBins + i] = 0.f;
-#endif
+	if (filmDenoiserHistoImage) {
+		for (uint channelIndex = 0; channelIndex < 3; ++channelIndex)
+			for (uint i = 0; i < filmDenoiserNbOfBins; ++i)
+				filmDenoiserHistoImage[gid * filmDenoiserNbOfBins * 3 + channelIndex * filmDenoiserNbOfBins + i] = 0.f;
+	}
 }
